Added password reset capabilities. Implemented a simple property estimation algorithm and made some more changes on the backend.